infra/k8s/platform-app-gateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-app-gateway
spec:
  selector:
    app: platform-app-gateway
  ports:
    - name: http
      port: 80
      targetPort: 8080
