infra/k8s/platform-app-gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-app-gateway
spec:
  rules:
    - host: platform-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platform-app-gateway
                port:
                  number: 80
